--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!doctype html>
 <html lang="ko">
   <head>
+    <style>
+      html, body, #root {
+        height: 100%;
+        width: 100%;
+      }
+      * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>머랭?!</title>
