--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       }
     </style>
     <meta charset="UTF-8" />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>머랭?!</title>
   </head>
